syntax = "proto3";

package common.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/cloudfresco/sc-gs1/internal/protogen/common/v1";

message GetByIdRequest {
  uint32 id = 1;
  string user_email = 2;
  string request_id = 3;
}

message GetRequest {
  string id = 1;
  string user_email = 2;
  string request_id = 3;
}

message Empty {}

message CrUpdUser {
  string status_code = 1;
  string created_by_user_id = 2;
  string updated_by_user_id = 3;
}

message CrUpdTime {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp updated_at = 2;
}

message PartyInfo {
  uint32 party_id = 1;
  string party_name = 2;
}

message Address {
  uint32 id = 1;
  bytes uuid4 = 2;
  string id_s = 3;
  string name1 = 35;
  string addr_list_agency_id = 4;
  string addr_list_id = 5;
  string addr_list_version_id = 6;
  string address_type_code = 7;
  string address_format_code = 8;
  string postbox = 9;
  string floor1 = 10;
  string room = 11;
  string street_name = 12;
  string additional_street_name = 13;
  string block_name = 14;
  string building_name = 15;
  string building_number = 16;
  string inhouse_mail = 17;
  string department = 18;
  string mark_attention = 19;
  string mark_care = 20;
  string plot_identification = 21;
  string city_subdivision_name = 22;
  string city_name = 23;
  string postal_zone = 24;
  string country_subentity = 25;
  string country_subentity_code = 26;
  string region = 27;
  string district = 28;
  string timezone_offset = 29;
  string country_id_code = 30;
  string country_name = 31;
  double location_coord_lat = 32;
  double location_coord_lon = 33;
  string note = 34;
}

message EpcisEventD {
  string event_id = 1;
  string event_time_zone_offset = 2;
  string certification = 3;
}

message EpcisEventT {
  google.protobuf.Timestamp event_time = 1;
}

message ErrorDeclarationD {
  string reason = 1;
}

message ErrorDeclarationT {
  google.protobuf.Timestamp declaration_time = 1;
}

message SensorMetadataD {
  string device_id = 1;
  string device_metadata = 2;
  string raw_data = 3;
  string data_processing_method = 4;
  string biz_rules = 5;
}

message SensorMetadataT {
  google.protobuf.Timestamp sensor_time = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
}

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateRole {
  string name = 1;
  string description = 2;
  string auth0_domain = 3;
  string auth0_mgmt_token = 4;
  string user_id = 5;
  string user_email = 6;
  string request_id = 7;
}

message GetRole {
  string role_id = 1;
  string user_id = 2;
  string auth0_domain = 3;
  string auth0_mgmt_token = 4;
  string user_email = 5;
  string request_id = 6;
}

message GetRoles {
  string auth0_domain = 1;
  string auth0_mgmt_token = 2;
  string user_id = 3;
  string user_email = 4;
  string request_id = 5;
}

message DeleteRole {
  string role_id = 1;
  string auth0_domain = 2;
  string auth0_mgmt_token = 3;
  string user_email = 4;
  string request_id = 5;
}

message UpdateRole {
  string role_id = 1;
  string name = 2;
  string description = 3;
  string auth0_domain = 4;
  string auth0_mgmt_token = 5;
  string user_email = 6;
  string request_id = 7;
}

message RolePermission {
  string permission_name = 1;
  string description = 2;
  string resource_server_name = 3;
  string resource_server_identifier = 4;
  string role_id = 5;
  string user_id = 6;
  string user_email = 7;
  string request_id = 8;
}

message AddPermisionsToRoles {
  string resource_server_identifier = 1;
  string permission_name = 2;
  string role_id = 3;
  string user_id = 4;
  string auth0_domain = 5;
  string auth0_mgmt_token = 6;
  string user_email = 7;
  string request_id = 8;
}

message RemoveRolePermission {
  string resource_server_identifier = 1;
  string permission_name = 2;
  string role_id = 3;
  string user_id = 4;
  string auth0_domain = 5;
  string auth0_mgmt_token = 6;
  string user_email = 7;
  string request_id = 8;
}

message GetRolePermissions {
  string role_id = 1;
  string user_id = 2;
  string auth0_domain = 3;
  string auth0_mgmt_token = 4;
  string user_email = 5;
  string request_id = 6;
}

message AssignRolesToUsers {
  string role_id = 1;
  string assign_to_user_id = 2;
  string user_id = 3;
  string auth0_domain = 4;
  string auth0_mgmt_token = 5;
  string user_email = 6;
  string request_id = 7;
}

message ViewUserRoles {
  string auth0_domain = 1;
  string auth0_mgmt_token = 2;
  string user_id = 3;
  string user_email = 4;
  string request_id = 5;
}

message AddAPIPermission {
  repeated Permission permissions = 1;
  string auth0_domain = 2;
  string auth0_mgmt_token = 3;
  string auth0_api_id = 4;
  string user_id = 5;
  string user_email = 6;
  string request_id = 7;
}

message Permission {
  string permission_name = 1;
  string permission_description = 2;
}
